--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
-    <iron-component-page src="uvalib-alerts.html"></iron-component-page>
+    <iron-component-page src="all-imports.html"></iron-component-page>
   </body>
 </html>
