--- a/all-imports.html
+++ b/all-imports.html
@@ -1,3 +1,3 @@
-<link rel="import" href="uvalib-alert.html">
-<link rel="import" href="uvalib-alert-dialog.html">
+<link rel="import" href="uvalib-alerts.html">
+<link rel="import" href="uvalib-alerts-dialog.html">
 <link rel="import" href="uvalib-alerts.html">
