ongoing setup work

--- a/uvalib-alerts-behavior.html
+++ b/uvalib-alerts-behavior.html
@@ -47,8 +47,12 @@
       type: {
         type: String,
         value: "Service interruptions"
-      }
+      },
 
+    },
+
+    resetDismissed: function(){
+      
     }
   };
 
