--- a/uvalib-alerts-push.html
+++ b/uvalib-alerts-push.html
@@ -2,13 +2,13 @@
 <link rel="import" href="uvalib-alerts-behavior.html">
 
 <!--
-`uvalib-alerts`
-University of Virginia Library Alert Blocks (notification blocks that are always 100% but only take up height when an alert is available to display)
+`uvalib-alerts-push`
+University of Virginia Library Alert push notification
 
 @demo demo/index.html
 -->
 
-<dom-module id="uvalib-alerts-block">
+<dom-module id="uvalib-alerts-push">
   <template>
     <style>
       :host {
@@ -21,7 +21,7 @@ University of Virginia Library Alert Blocks (notification blocks that are always
   <script>
     Polymer({
 
-      is: 'uvalib-alerts-block',
+      is: 'uvalib-alerts-push',
 
       properties: {
         prop1: {
