--- a/uvalib-alerts-dialog.html
+++ b/uvalib-alerts-dialog.html
@@ -22,24 +22,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!--
 
-`<uvalib-alert-dialog>` is a dialog with Material Design styling and optional animations when it is
-opened or closed. It provides styles for a header, content area, and an action area for buttons.
-You can use the `<paper-dialog-scrollable>` element (in its own repository) if you need a scrolling
-content area. To autofocus a specific child element after opening the dialog, give it the `autofocus`
-attribute. See `Polymer.PaperDialogBehavior` and `Polymer.IronOverlayBehavior` for specifics.
+`<uvalib-alert-dialog>` is a UVA Library Alert Dialog and optional animations when it is
+opened or closed.
 
-For example, the following code implements a dialog with a header, scrolling content area and
-buttons. Focus will be given to the `dialog-confirm` button when the dialog is opened.
+For example, the following code implements an emergency alert.
 
-    <uvalib-alert-dialog>
-      <h2>Header</h2>
-      <paper-dialog-scrollable>
-        Lorem ipsum...
-      </paper-dialog-scrollable>
-      <div class="buttons">
-        <paper-button dialog-dismiss>Cancel</paper-button>
-        <paper-button dialog-confirm autofocus>Accept</paper-button>
-      </div>
+    <uvalib-alert-dialog modal
+      alerts='[{"uuid":"footest","title":"Alert title","type":"emergency","body":"<p>Hello World</p>","link":"http://google.com"}]'>
     </uvalib-alert-dialog>
 
 ### Styling
@@ -58,10 +47,9 @@ For example:
     <link rel="import" href="components/neon-animation/animations/scale-up-animation.html">
     <link rel="import" href="components/neon-animation/animations/fade-out-animation.html">
 
-    <uvalib-alert-dialog entry-animation="scale-up-animation"
-                  exit-animation="fade-out-animation">
-      <h2>Header</h2>
-      <div>Dialog body</div>
+    <uvalib-alert-dialog modal entry-animation="scale-up-animation"
+                  exit-animation="fade-out-animation"
+                  alerts='[{"uuid":"footest","title":"foo","type":"emergency","body":"<p>Hello World</p>","link":"http://google.com"}]'>
     </uvalib-alert-dialog>
 
 ### Accessibility
@@ -135,6 +123,7 @@ element.
         color: rgba(0, 0, 0, 0.87);
       }
     </style>
+    <iron-localstorage name="uvalib-alerts" value=""></iron-localstorage>
     <h2><iron-icon icon="{{_getIcon(_selectedAlert)}}"></iron-icon>{{_getType(_selectedAlert)}}</h2>
     <h3 hidden$="{{!_selectedAlert.title}}">{{_selectedAlert.title}}</h3>
     <div class="body" inner-h-t-m-l="{{_selectedAlert.body}}"></div>
