--- a/uvalib-alerts-behavior.html
+++ b/uvalib-alerts-behavior.html
@@ -3,7 +3,7 @@
 <script>
   /**
    * @demo demo/index.html
-   * @uvalibBehavior uvalibbehavior.alerts
+   * @polymerBehavior uvalibbehavior.alerts
    */
   window.uvalibbehaviors = window.uvalibbehaviors || {};
   uvalibbehaviors.alerts = {
@@ -52,7 +52,7 @@
     },
 
     resetDismissed: function(){
-      
+
     }
   };
 
