--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
     <title>uvalib-alerts</title>
-
-    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
-
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
-    <iron-component-page src="all-imports.html"></iron-component-page>
+    <iron-component-page></iron-component-page>
   </body>
 </html>
