scafolding out to use UvalibUiElement

--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../uvalib-theme/uvalib-ui-element.html">
+<link rel="import" href="../uva-helper-libs/polyfills/object.assign.html">
 
 <dom-module id="uvalib-alerts">
   <template>
