--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -36,7 +36,7 @@
     <uva-library-alerts id="alertsModel" alerts="{{_alerts}}" seen-count="{{seenCount}}" seen="{{_alertsSeen}}"></uva-library-alerts>
     <dom-repeat items="[[_alerts]]" as="alert">
       <template>
-        <iron-collapse opened$="[[!alert.seen]]">
+        <iron-collapse opened$="[[!alert.seen]]" on-opened-changed="_sizeChanged" on-transitioning-changed="_sizeChanged">
           <div class="alert-item" hot$="[[_isHot(alert.severity)]]" uuid="[[alert.uuid]]">
             <div class="alert-head">
               <div class="alert-title" on-click="_toggleIt">[[alert.title]]</div>
@@ -45,7 +45,7 @@
                 <uvalib-button on-click="_dismissIt">Dismiss</uvalib-button>
               </template>
             </div>
-            <iron-collapse class="body-collapse" opened$="[[_isHot(alert.severity)]]">
+            <iron-collapse class="body-collapse" opened$="[[_isHot(alert.severity)]]" on-opened-changed="_sizeChanged" on-transitioning-changed="_sizeChanged">
               <div class="alert-body">
                 <marked-element markdown="[[alert.body]]">
                   <div slot="markdown-html"></div>
@@ -98,6 +98,9 @@
       }
       unseeAll(){
         this.set('_alertsSeen',[]);
+      }
+      _sizeChanged(){
+        this.dispatchEvent(new CustomEvent('size-changed', {detail: {height: this.clientHeight}}));
       }
     }
 
