--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -18,6 +18,7 @@
         border-width: 2px 0 0 0;
         border-color: var(--color-white);
         border-style: solid;
+        color: var(--color-white);
       }
       .alert-item[hot] {
         background-color: var(--color-emergency-red);
