--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -4,13 +4,14 @@
 <link rel="import" href="../polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../iron-collapse/iron-collapse.html">
 <link rel="import" href="../marked-element/marked-element.html">
-<link rel="import" href="../uvalib-button/uvalib-button.html">
+<link rel="import" href="../paper-button/paper-button.html">
 <link rel="import" href="../uvalib-theme/uvalib-alerts-style.html">
 
 <dom-module id="uvalib-alerts">
   <template>
     <custom-style>
-      <style include="uvalib-theme uvalib-alerts-style"></style>
+      <style include="uvalib-theme uvalib-alerts-style">
+      </style>
     </custom-style>
 
     <uva-library-alerts id="alertsModel" alerts="{{_alerts}}" seen-count="{{seenCount}}" seen="{{_alertsSeen}}"></uva-library-alerts>
@@ -21,8 +22,8 @@
             <div class="alert-head">
               <div class="alert-title" on-click="_toggleIt">[[alert.title]]</div>
               <template is="dom-if" if="[[!_isHot(alert.severity)]]">
-                <uvalib-button on-click="_toggleIt">More</uvalib-button>
-                <uvalib-button on-click="_dismissIt">Dismiss</uvalib-button>
+                <paper-button on-click="_toggleIt">More</paper-button>
+                <paper-button on-click="_dismissIt">Dismiss</paper-button>
               </template>
             </div>
             <iron-collapse class="body-collapse" opened$="[[_isHot(alert.severity)]]" on-opened-changed="_sizeChanged" on-transitioning-changed="_sizeChanged">
