--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,7 @@
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../../polymer/lib/elements/dom-bind.html">
+    <link rel="import" href="../../paper-button/paper-button.html">
     <link rel="import" href="../uvalib-alerts.html">
 
     <custom-style>
@@ -26,7 +27,7 @@
           <dom-bind id="app">
             <template>
               <div>
-                <uvalib-button onclick="seeall()">See All Alerts</uvalib-button>
+                <paper-button onclick="seeall()">See All Alerts</paper-button>
                 [[_alertSeenCount]]
               </div>
               <uvalib-alerts id="alerts" seen-count="{{_alertSeenCount}}"></uvalib-alerts>
