--- a/test/uvalib-alerts_test.html
+++ b/test/uvalib-alerts_test.html
@@ -30,22 +30,13 @@
 
         test('instantiating the element with default properties works', () => {
           const element = fixture('BasicTestFixture');
-          assert.equal(element.prop1, 'uvalib-alerts');
-          const elementShadowRoot = element.shadowRoot;
-          const elementHeader = elementShadowRoot.querySelector('h2');
-          assert.equal(elementHeader.innerHTML, 'Hello uvalib-alerts!');
-        });
-
-        test('setting a property on the element works', () => {
-          // Create a test fixture
-          const element = fixture('ChangedPropertyTestFixture');
-          assert.equal(element.prop1, 'new-prop1');
-          const elementShadowRoot = element.shadowRoot;
-          const elementHeader = elementShadowRoot.querySelector('h2');
-          assert.equal(elementHeader.innerHTML, 'Hello new-prop1!');
+          assert.equal(element.constructor.is, 'uvalib-alerts');
+          assert.isNotNaN(element.seenCount, 'Seen count is a number');
+          assert.isAtLeast(element.seenCount, 0, 'Seen count >= 0')
         });
 
       });
+      a11ySuite('BasicTestFixture');
     </script>
 
   </body>
