--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -11,6 +11,65 @@
   <template>
     <custom-style>
       <style include="uvalib-theme uvalib-alerts-style">
+        :host {
+          display: block;
+        }
+        .alert-item {
+          min-height: 41px;
+          background-color: var(--color-primary-orange);
+          border-width: 2px 0 0 0;
+          border-color: var(--color-white);
+          border-style: solid;
+          color: var(--color-white);
+          @apply --layout-horizontal;
+          @apply --layout-center-justified;
+        }
+        .alert-item div {
+          width: 100%;
+          max-width: var(--uvalib-display-width-max);
+          padding: .15em;
+        }
+        .alert-item.alert1 {
+          background-color: var(--color-emergency-red);
+        }
+        .alert-item.alert2 {
+          background-color: var(--color-primary-orange);
+        }
+        .alert-item.alert3 {
+          background-color: var(--uvalib-orange-200);
+          color: var(--uvalib-black);
+        }
+        .alert-item.alert1 p a, .alert-item.alert2 p a,.alert-item.alert3 p a {
+          text-decoration: underline;
+          color: var(--color-white);
+        }
+        .alert-item.alert1 p a:hover, .alert-item.alert2 p a:hover, .alert-item.alert3 p a:hover {
+          font-style: italic;
+        }
+        .alert-item.alert1 p a:focus, .alert-item.alert2 p a:focus, .alert-item.alert3 p a:focus {
+          outline: var(--color-accessibility-outline-dark-bg) dotted 3px;
+          padding: .15em;
+        }
+        .alert-item.alert3 paper-button {
+          color: var(--uvalib-black);
+        }
+
+        .alert-head {
+          @apply --layout-horizontal;
+        }
+        .alert-title {
+          @apply --layout-flex;
+        }
+        [slot="markdown-html"] p {
+          margin:0;
+          padding:0;
+        }
+        paper-button {
+          color: var(--color-white);
+        }
+        .hidden {
+          display: none;
+        }
       </style>
     </custom-style>
 
@@ -23,7 +82,8 @@
             <div class="alert-head">
               <div class="alert-title" on-click="_toggleIt">[[alert.title]]</div>
               <template is="dom-if" if="[[!_isHot(alert.severity)]]">
-                <paper-button on-click="_toggleIt">More</paper-button>
+                <paper-button class="toggle" on-click="_toggleIt">More</paper-button>
+                <paper-button class="toggle hidden" on-click="_toggleIt">Less</paper-button>
                 <paper-button on-click="_dismissIt">Dismiss</paper-button>
               </template>
             </div>
@@ -74,6 +134,10 @@
       }
       _toggleIt(e){
         e.currentTarget.parentElement.parentElement.querySelector('.body-collapse').toggle();
+        e.currentTarget.parentElement.querySelectorAll('.toggle').forEach(function(el) {
+          el.classList.toggle("hidden");
+          if (!el.classList.contains("hidden")) el.focus();
+        });
       }
       _dismissIt(e){
         var uuid = e.currentTarget.parentElement.parentElement.parentElement.uuid;
