--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -5,12 +5,11 @@
 <link rel="import" href="../iron-collapse/iron-collapse.html">
 <link rel="import" href="../marked-element/marked-element.html">
 <link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../uvalib-theme/uvalib-alerts-style.html">
 
 <dom-module id="uvalib-alerts">
   <template>
     <custom-style>
-      <style include="uvalib-theme uvalib-alerts-style">
+      <style include="uvalib-theme">
         :host {
           display: block;
         }
