--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -38,9 +38,13 @@
           background-color: var(--uvalib-orange-200);
           color: var(--uvalib-black);
         }
-        .alert-item.alert1 p a, .alert-item.alert2 p a,.alert-item.alert3 p a {
+        .alert-item.alert1 p a, .alert-item.alert2 p a {
           text-decoration: underline;
           color: var(--color-white);
+        }
+        .alert-item.alert3 p a {
+          text-decoration: underline;
+          color: var(--color-black);
         }
         .alert-item.alert1 p a:hover, .alert-item.alert2 p a:hover, .alert-item.alert3 p a:hover {
           font-style: italic;
