fixes stacking order bug

--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -65,6 +65,8 @@
         }
         paper-button {
           color: var(--color-white);
+          position: static;
+          z-index: auto;
         }
         .hidden {
           display: none;
