allow for multiple patterns for regional alerts

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,7 +39,7 @@
       <h3>Basic uvalib-alerts-regional demo</h3>
       <demo-snippet>
         <template>
-            <uvalib-alerts-regional id="alerts-regional" url="www.library.virginia.edu/services/faculty"></uvalib-alerts-regional>
+            <uvalib-alerts-regional id="alerts-regional" url="https://www.library.virginia.edu/services/scps/foobar"></uvalib-alerts-regional>
         </template>
       </demo-snippet>
       <script>
