fix override bug

--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -101,8 +101,8 @@
       </style>
     </custom-style>
 
-    <uva-library-alerts id="alertsModel" alerts="{{_alerts}}" seen-count="{{seenCount}}" seen="{{_alertsSeen}}"></uva-library-alerts>
-    <dom-repeat items="[[_getAlerts(_alerts,override)]]" as="alert">
+    <uva-library-alerts auto="[[!override]]" id="alertsModel" alerts="{{alerts}}" seen-count="{{seenCount}}" seen="{{_alertsSeen}}"></uva-library-alerts>
+    <dom-repeat items="[[alerts]]" as="alert">
       <template>
         <iron-collapse opened$="[[!alert.seen]]" on-opened-changed="_sizeChanged" on-transitioning-changed="_sizeChanged">
           <div class$="alert-item [[alert.severity]]" uuid="[[alert.uuid]]">
@@ -143,12 +143,13 @@
       static get properties() {
         return Object.assign(super.properties,{
 
-          _alerts: {
+          alerts: {
             type: Array,
             observer: '_sizeChanged'
           },
           override: {
-            type: Array
+            type: Boolean,
+            value: false
           },
           _alertsSeen: Array,
           seenCount: {
@@ -189,9 +190,6 @@
       }
       _sizeChanged(){
         this.dispatchEvent(new CustomEvent('size-changed', {detail: {height: this.clientHeight}}));
-      }
-      _getAlerts(_alerts,override){
-        return override? override: _alerts;
       }
     }
 
