--- a/uvalib-alerts.html
+++ b/uvalib-alerts.html
@@ -15,11 +15,11 @@
         }
         .alert-item {
           min-height: 41px;
-          background-color: var(--color-primary-orange);
+          background-color: var(--uvalib-yellow);
           border-width: 2px 0 0 0;
-          border-color: var(--color-white);
+          border-color: #fff;
           border-style: solid;
-          color: var(--color-white);
+          color: var(--uvalib-text-dark);
           @apply --layout-horizontal;
           @apply --layout-center-justified;
         }
@@ -30,25 +30,24 @@
         }
         .alert-item.alert1 {
           background-color: var(--color-emergency-red);
+          color: #fff;
         }
         .alert-item.alert2 {
-          background-color: var(--color-primary-orange);
+          background-color: var(--uvalib-yellow);
         }
         .alert-item.alert3 {
-          background-color: var(--uvalib-orange-200);
-          color: var(--uvalib-black);
+          background-color: var(--uvalib-yellow-lightest);
         }
-        .alert-item.alert1 p a, .alert-item.alert2 p a {
+        .alert-item.alert1 p a {
           text-decoration: underline;
           color: var(--color-white);
         }
         .alert-item.alert2 paper-button:hover {
-          background-color: #C54800;
-          color: var(--uvalib-white);
+          background-color: var(--uvalib-yellow-dark);
+          color: #000;
         }
         .alert-item.alert3 p a {
           text-decoration: underline;
-          color: var(--color-black);
         }
         .alert-item.alert1 p a:hover, .alert-item.alert2 p a:hover, .alert-item.alert3 p a:hover {
           font-style: italic;
@@ -59,11 +58,10 @@
         }
         .alert-item.alert3 paper-button {
           color: var(--uvalib-black);
-          border-color: var(--color-primary-orange);
+          border-color: var(--uvalib-yellow-dark);
         }
         .alert-item.alert3 paper-button:hover {
-          background-color: var(--uvalib-secondary-web-orange);
-          color: var(--uvalib-white);
+          background-color: var(--uvalib-yellow);
         }
         .alert-item.alert1 .alert-head:before, .alert-item.alert2 .alert-head:before {
           font-family: 'uvalib-custom-icons' !important;
@@ -91,9 +89,12 @@
           padding:0;
         }
         paper-button {
-          color: var(--color-white);
+          color: var(--uvalib-text-dark);
           position: static;
           z-index: auto;
+        }
+        paper-button:visited, paper-button:focus, paper-button:hover, paper-button:active {
+          font-weight: normal;
         }
         .hidden {
           display: none;
